First working version of a bundler, focused on bundling during an interactive R session.
The approach is to add a new "bundle" method which installs package dependencies into a ".Rbundle" library under a project's root (see bundle_library).

Uses devtools' 'install' command to install packages and their dependencies, along with the current package. When 'bundling' is complete, the package is reloaded.

Tests generate new 'bundles' for two mock packages: simple-dependencies, no-dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: rbundler
 Maintainer: Yoni Ben-Meshulam <yoni.bmesh@gmail.com>
 Author: Yoni Ben-Meshulam <yoni.bmesh@gmail.com>
-Version: 1.0
+Version: 0.1
 License: GPL-3
 Title: Rbundler manages an application's dependencies systematically
     and repeatedly.
@@ -9,8 +9,12 @@ Description: Specify your dependencies in your project's root
     directory, and be able to install and use dependencies in a
     repeatable fashion, without requiring the manual maintenance of
     R package libraries.
+Depends:
+    devtools
 Suggests:
     testthat,
     roxygen2
 Collate:
     'rbundler-package.r'
+    'bundle.r'
+    'bundle-library.r'
