--- a/inst/tests/simple-dependencies/DESCRIPTION
+++ b/inst/tests/simple-dependencies/DESCRIPTION
@@ -1,5 +1,6 @@
 Package: simpledependencies
-Title: Tools to make developing R code easier
+Title: A mock package for testing that a package with some dependencies
+       can be bundled. See test_bundle.r
 License: GPL-2
 Description: 
 Author: Yoni Ben-Meshulam <yoni.bmesh@gmail.com>
