Revert plyr test dependency to PerformanceAnalytics. Add check for package already installed.

--- a/inst/tests/simple-dependencies/DESCRIPTION
+++ b/inst/tests/simple-dependencies/DESCRIPTION
@@ -7,6 +7,6 @@ Author: Yoni Ben-Meshulam <yoni.bmesh@gmail.com>
 Maintainer: Yoni Ben-Meshulam <yoni.bmesh@gmail.com>
 Version: 0.1
 Depends:
-    plyr
+    PerformanceAnalytics
 Collate:
     ''
