Append library to R_LIBS_USER instead of overriding it.
Extract and export two new functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,5 @@
 export(bundle)
+export(update_current_environment)
+export(update_renviron_file)
 importFrom(devtools,as.package)
 importFrom(devtools,install)
