Add support for versioned dependencies.
Retrieves the set of available packages from the current - or the
configured - repository. Cross-references these packages with the
bundled package dependencies, and determines which package versions to
install. Constructs a list of URLs of packages to install, and uses
the `devtools` utility function `install_url` to install them.

* Supports CRAN-like Archive directories, as well as single-directory repositories.
* Adds support for dynamically generating packages.
* Replaces hard-coded mock packages with dynamically generated mock
packages.
* Use dynamically-generated mock packages for all testing.
* Fix missing roxygen2 docs.
* Switch to using an augmented implementation of devtools'
`install_version`. Note that the name is identical and much of the
functionality is similar.
* `bundle` now simply uses the default repositories, meaning the user
 must set their repos option prior to calling `bundle`. This greatly
 simplifies the logic in `bundle`, since we no longer have to deal with
 the temporary repository setting and the `tryCatch` surrounding it.
 This also makes it far easier to debug.
* Add utility functions to help diagnose package version issues. Specifically,
export `find_available_versions`.
* Set pkgType to 'source' for all testing.

Update NEWS.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,13 @@ Version: 0.3.0
 License: GPL-3
 Title: Rbundler manages an application's dependencies systematically
     and repeatedly.
-Description: Specify your dependencies in your project's root
-    directory, and be able to install and use dependencies in a
+Description: Rbundler manages project-specific libraries and package
+    installations. By specifying dependencies in your project's root
+    directory, you may install and use dependencies in a
     repeatable fashion without requiring manual maintenance.
-    Uses a combination of project-specific R library in PROJECT_ROOT/.Rbundle
-    and a project-specific R_LIBS_USER, set in PROJECT_ROOT/.Renviron
+    Rbundler uses a combination of a project-specific R library in
+    `PROJECT_ROOT/.Rbundle` (by default) and a project-specific
+    `R_LIBS_USER` value, set in `PROJECT_ROOT/.Renviron`.
 Depends:
     R (>= 2.15.1),
     devtools (>= 0.7)
@@ -19,3 +21,8 @@ Suggests:
 Collate:
     'rbundler-package.r'
     'bundle.r'
+    'load_available_packages.r'
+    'create_package_description.r'
+    'create_package.r'
+    'create_mock_packages.r'
+    'install_version.r'
