--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,10 @@
 export(bundle)
+export(create_mock_packages)
+export(create_package)
+export(create_package_description)
+export(find_available_versions)
+export(install_version)
+export(mock_dependency)
 export(update_current_environment)
 export(update_renviron_file)
 importFrom(devtools,as.package)
