--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,8 @@
 export(bundle)
+export(create_mock_packages)
+export(create_package)
+export(create_package_description)
+export(dependency_urls)
 export(update_current_environment)
 export(update_renviron_file)
 importFrom(devtools,as.package)
