Fixes for issues raised by CRAN maintainers: * Fix line width in example * Fix function call, removing the extra colon
Also:
Add a note on nested dependency issues.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,25 @@
 Package: rbundler
 Maintainer: Yoni Ben-Meshulam <yoni.bmesh@gmail.com>
 Author: Yoni Ben-Meshulam <yoni.bmesh@gmail.com>
-Version: 0.3.3
+Version: 0.3.4
 License: GPL-3
 Title: Rbundler manages an application's dependencies systematically
     and repeatedly.
-Description: Rbundler manages project-specific libraries and package
-    installations. By specifying dependencies in your project's root
-    directory, you may install and use dependencies in a
-    repeatable fashion without requiring manual maintenance.
-    Rbundler uses a combination of a project-specific R library in
+Description: Rbundler manages a project-specific library for dependency
+    package installation. By specifying dependencies in a DESCRIPTION file
+    in a project's root directory, one may install and use dependencies
+    in a repeatable fashion without requiring manual maintenance.
+    rbundler creates a project-specific R library in
     `PROJECT_ROOT/.Rbundle` (by default) and a project-specific
-    `R_LIBS_USER` value, set in `PROJECT_ROOT/.Renviron`.
+    `R_LIBS_USER` value, set in `PROJECT_ROOT/.Renviron`. It supports
+    dependency management for R standard "Depends", "Imports",
+    "Suggests", and "LinkingTo" package dependencies. rbundler also
+    attempts to validate and install versioned dependencies, such
+    as ">=", "==", "<=". Note that, due to the way R manages package
+    installation, differing nested versioned dependencies are not
+    allowed. For example, if your project depends on packages A (== 1),
+    and B (== 2), but package A depends on B (== 1), then a nested
+    dependency violation will cause rbundler to error out.
 Depends:
     R (>= 2.15.1),
     devtools (>= 1.3)
