--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,9 @@ export(bundle)
 export(create_mock_packages)
 export(create_package)
 export(create_package_description)
-export(find_available_versions)
-export(install_version)
 export(mock_dependency)
 export(update_current_environment)
 export(update_renviron_file)
 importFrom(devtools,as.package)
 importFrom(devtools,install)
+importFrom(devtools,install_version)
