--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@
 
 language: c
 
+# Drop server authenticity check to avoid hanging build: https://github.com/travis-ci/travis-ci/issues/1588
+before_script:
+  - echo -e "\nHost github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+
 before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
